--- a/mini_project_moriah_goldsmith.ipynb
+++ b/mini_project_moriah_goldsmith.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "#### Moriah Goldsmith, 215769241\n",
-    "git link: "
+    "git link: https://github.com/moriah20/mini-project-1-Moriah-Goldsmith"
    ]
   },
   {
